--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   gtag('config', 'G-8REM0ZJC5P');
 </script>    
 <title>Portfolio</title>
+<meta content="Connor Le Frontend Website Developer" property="og:description" />
+<meta content="https://connormle.github.io" property="og:url" />
+<meta content="/favicon.png" property="og:image" />
   </head>
   <body>
     <div id="app"></div>
