--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   gtag('config', 'G-8REM0ZJC5P');
 </script>    
 <title>Portfolio</title>
-<meta name="description" content="Connor Le Front End Web Developer Portfolio">
+<meta name="description" content="Connor Le's Frontend Web Developer Portfolio">
 <meta name="keywords" content="Website, Web Developer, Connor, Connor Le">
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="Connor Le Front End Web Developer Portfolio">
-<meta property="og:title" content="Connor Le Front End Web Developer Portfolio">
-<meta content="Connor Le Frontend Website Developer" property="og:description" />
+<meta property="og:site_name" content="Connor Le's Portfolio">
+<meta property="og:title" content="Connor Le's Portfolio">
+<meta content="Connor Le | Frontend Website Developer" property="og:description" />
 <meta content="https://connormle.github.io" property="og:url" />
 <meta content="/favicon.png" property="og:image" />
   </head>
